--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,12 +3,16 @@
 @tailwind utilities;
 
 input[type="text"], input[type="password"], 
-input[type="email"], input[type="number"] textarea {
+input[type="email"], input[type="number"], textarea {
   @apply w-full border my-1 py-2 px-3 rounded-2xl;
 }
 
 button{
   @apply bg-gray-300;
+}
+
+textarea{
+	height: 140px;
 }
 
 button.primary {
